# Socratic-maturity

./: ARCHITECTURE.md  PRODUCTION.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: agent_workflow_example.py  basic_usage.py
src/socrates_maturity/: __init__.py  calculator.py  models.py  workflows.py
src/socratic_maturity/: __init__.py  calculator.py  maturity.py  models.py  workflows.py
tests/: test_calculator.py  test_module_imports.py  test_workflows.py
